added native access comment in auth listener. Added plugin to maven